finished with aligning containers

--- a/Final-Project/index.html
+++ b/Final-Project/index.html
@@ -16,20 +16,26 @@
 <body>
     <header>
         <!-- navigation: home, section 1, section 2, section 3 -->
-        <div class="container-header">
-            <p id="home">Tribute: Beau Carnes</p>
-            <nav>
-                <a href="#home">Home</a>
-                <a href="#career">Career</a>
-                <a href="#section-videos">Videos</a>
-                <a href="#podcast">Podcast</a>
-            </nav>
+        <div class="dark-grey">
+            <div class="max-width">
+                <div class="container-header">
+                    <p id="home">Tribute: Beau Carnes</p>
+                    <nav>
+                        <a href="#home">Home</a>
+                        <a href="#career">Career</a>
+                        <a href="#section-videos">Videos</a>
+                        <a href="#podcast">Podcast</a>
+                    </nav>
+                </div>
+            </div>
         </div>
     </header>
     <main>
         <!-- introduction -->
-        <h1>Beau Carnes</h1>
-        <p>A teacher and developer with freeCodeCamp.org. The one who runs the freeCodeCamp.org YouTube channel.</p>
+        <div class="centered light-grey">
+            <h1>Beau Carnes</h1>
+            <p>A teacher and developer with freeCodeCamp.org. The one who runs the freeCodeCamp.org YouTube channel.</p>
+        </div>
         <article>
             <section id="career" class="career">
                 <div class="centered">
@@ -66,12 +72,15 @@
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </section>
-            <!-- study tips -->
+            <!-- podcast -->
             <section id="podcast" class="podcast">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/DNPF0oPcMDs?si=3YU4FSerQIeWqf3W"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <div class="centered">
+                    <h2>Podcast</h2>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/DNPF0oPcMDs?si=3YU4FSerQIeWqf3W"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
             </section>
         </article>
     </main>
